2019-04-17 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/pdk.src/pdk.cc:
	  Fix register dump, patch by Nicolas Lesser.

2019-04-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Various fixes and improvements.
	* src/SDCCpeeph.c,
	  src/pdk/peeph.def:
	  Remove untargeted labels.
	* support/regression/tests/*.c:
	  Disable tests that won't work anytime soon on pkd15.
	* sim/ucsim/globals.cc:
	  More verbose pdk subtype output.

2019-04-16 Philipp Klaus Krause <pkk AT spth.de>

	* Merged pdk branch to trunk.

2019-04-15 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/linksrc/lkrloc3.c:
	  pdk13 linker fix, patch By Nicolas Lesser.

2019-04-15 Philipp Klaus Krause <pkk AT spth.de>

	* Merged post-3.9 branch to trunk.

2019-04-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fix POINTER_SET with left operand on stack, right operand in pseudo-register.

2019-04-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-460010.c,
	  support/regression/tests/bug1928022.c,
	  support/regression/tests/gcc-torture-execute-991216-2.c,
	  support/regression/tests/gcc-torture-execute-va-arg-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-15.c:
	  Disable some tests for pdk15, on which they won't work anytime soon.
	* src/pdk/gen.c:
	  Improve handling of 16-bit return value,
	  fix stack parameters,
	  fix carry in comparison of wide stack values.
	* src/pdk/peeph.def:
	  Remove double exchange.

2019-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix a bug in 16-bit store from registers via rematerialized pointer with non-zero offset;
	  fix a bug in handling of on-stack operands to &,|;
	  fix a bug in handling of past-end offsets for stack operands.

2019-04-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fix handling of -0.0 in ifx.

2019-04-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
