@@ -1,3 +1,10 @@
+2019-04-18 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sim/ucsim/pdk.src/inst.cc:
+	  Fix addc m, a, patch by Nicolas Lesser.
+	* src/pdk/gen.c:
+	  Reenable += optimization.
+
 2019-04-17 Philipp Klaus Krause <pkk AT spth.de>
 
 	* sim/ucsim/pdk.src/pdk.cc:
